// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignVarFromResponseBody should add postman collection var with name and @ key for response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resCount = jsonData?.[\\"@count\\"];
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData[\\"@count\\"]
if (_resCount !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData[\\"@count\\"]);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData[\\"@count\\"]);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData[\\"@count\\"] is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should add postman collection var with name and response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData.data.id);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData.data.id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should add postman collection var with name and response body value for array 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _res0Id = jsonData?.[0]?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData[0].id
if (_res0Id !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData[0].id);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData[0].id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData[0].id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should add postman collection var with name and response body value for root array 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _res0 = jsonData?.[0];
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData[0]
if (_res0 !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData[0]);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData[0]);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData[0] is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should add postman collection var with name and root response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _res = jsonData;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData
if (_res !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should generate a variable for the response body @ property with the cased templated expression 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resCompanies0Id = jsonData?.companies?.[0]?.[\\"@id\\"];
",
  "// pm.collectionVariables - Set companies_id as variable for jsonData.companies[0].[\\"@id\\"]
if (_resCompanies0Id !== undefined) {
   pm.collectionVariables.set(\\"companies_id\\", jsonData.companies[0].[\\"@id\\"]);
   console.log(\\"- use {{companies_id}} as collection variable for value\\",jsonData.companies[0].[\\"@id\\"]);
} else {
   console.log('INFO - Unable to assign variable {{companies_id}}, as jsonData.companies[0].[\\"@id\\"] is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should generate a variable for the response body and convert the casing for the templated name 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set CompaniesId as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"CompaniesId\\", jsonData.data.id);
   console.log(\\"- use {{CompaniesId}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{CompaniesId}}, as jsonData.data.id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should generate a variable for the response body and convert the casing for the variable name 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set companies_one_data_id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"companies_one_data_id\\", jsonData.data.id);
   console.log(\\"- use {{companies_one_data_id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{companies_one_data_id}}, as jsonData.data.id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should generate a variable for the response body and not convert the casing for the variable name 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set companiesOne.data.id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"companiesOne.data.id\\", jsonData.data.id);
   console.log(\\"- use {{companiesOne.data.id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{companiesOne.data.id}}, as jsonData.data.id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should generate a variable for the response body property with the cased templated expression 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resCompanies0Id = jsonData?.companies?.[0]?.id;
",
  "// pm.collectionVariables - Set companies_id as variable for jsonData.companies[0].id
if (_resCompanies0Id !== undefined) {
   pm.collectionVariables.set(\\"companies_id\\", jsonData.companies[0].id);
   console.log(\\"- use {{companies_id}} as collection variable for value\\",jsonData.companies[0].id);
} else {
   console.log('INFO - Unable to assign variable {{companies_id}}, as jsonData.companies[0].id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should generate a variable for the response body property with the templated expression 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resCompanies0Id = jsonData?.Companies?.[0]?.id;
",
  "// pm.collectionVariables - Set CompaniesId as variable for jsonData.Companies[0].id
if (_resCompanies0Id !== undefined) {
   pm.collectionVariables.set(\\"CompaniesId\\", jsonData.Companies[0].id);
   console.log(\\"- use {{CompaniesId}} as collection variable for value\\",jsonData.Companies[0].id);
} else {
   console.log('INFO - Unable to assign variable {{CompaniesId}}, as jsonData.Companies[0].id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should not show the log output for a postman collection var with name and response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData.data.id);
   // console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData.data.id is undefined.');
};
",
]
`;

exports[`assignVarFromResponseBody should show the log output for a postman collection var with name and response body value 1`] = `
Array [
  "// Set response object as internal variable
let jsonData = {};
try {jsonData = pm.response.json();}catch(e){}
",
  "// Set property value as variable
const _resDataId = jsonData?.data?.id;
",
  "// pm.collectionVariables - Set leadsAdd.id as variable for jsonData.data.id
if (_resDataId !== undefined) {
   pm.collectionVariables.set(\\"leadsAdd.id\\", jsonData.data.id);
   console.log(\\"- use {{leadsAdd.id}} as collection variable for value\\",jsonData.data.id);
} else {
   console.log('INFO - Unable to assign variable {{leadsAdd.id}}, as jsonData.data.id is undefined.');
};
",
]
`;
